--- a/env/.env
+++ b/env/.env
@@ -2,7 +2,7 @@
 
 DB_HOST = localhost
 DB_USER = root
-DB_PASSWORD = 
+DB_PASSWORD = admin12
 DB_DATABASE = users_tpi
 
 //Definimos los datos para JWT
